@@ -993,10 +993,6 @@ dl.portlet a:hover,
   }
 
 /* Table of Contents for Document body */
-dl#document-toc {
-  z-index: 1000;
-}
-
 #content-core {
     margin-bottom: 10px;
     padding: 0;
@@ -1066,6 +1062,32 @@ h1 {
 h1, h2 {
   letter-spacing:0;
   }
+
+/*--- TOC ---*/
+dl#document-toc {
+  float: none;
+  border: none;
+  font-size: 100%;
+}
+
+dl.toc dt {
+  margin-left: 0;
+}
+
+dl.toc li {
+  font-size: 1.3em;
+  font-weight: bold;
+}
+
+dl.toc li li {
+  font-size: 90%;
+  font-weight: bold;
+}
+
+dl.toc li li li {
+  font-size: 90%;
+  font-weight: normal;
+}
 
 /*----- Portlets Properties -----*/
 dl.portlet {
